Feature/kmeans anomaly detection (#32)
* k means clustering

* fixing build so it includes all dependencies rather than pissing around