@@ -1,3 +1,5 @@
+val sparkVersion =  "2.3.0"
+
 lazy val root = (project in file(".")).
 
   settings(
@@ -7,18 +9,22 @@ lazy val root = (project in file(".")).
     )),
     name := "AnomalyDetectionService",
     version := "0.1-SNAPSHOT",
-    sparkVersion := "2.3.0",
-    sparkComponents := Seq("streaming", "mllib", "streaming-kafka-0-10"),
-
-    javacOptions ++= Seq("-source", "1.8", "-target", "1.8"),
-    javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled"),
-    scalacOptions ++= Seq("-deprecation", "-unchecked"),
-    parallelExecution in Test := false,
     fork := true,
 
     libraryDependencies ++= Seq(
         "org.rogach" %% "scallop" % "3.1.2",
-        ("org.apache.spark" %% "spark-streaming-kafka-0-10" % sparkVersion.value).exclude("org.spark-project.spark", "unused")),
+        "org.apache.spark" %% "spark-streaming" % sparkVersion,
+        "org.apache.spark" %% "spark-streaming-kafka-0-10" % sparkVersion,
+        "org.apache.spark" %% "spark-mllib" % sparkVersion),
+
+    assemblyMergeStrategy in assembly := {
+      case m if m.toLowerCase.endsWith("manifest.mf")          => MergeStrategy.discard
+      case m if m.toLowerCase.matches("meta-inf.*\\.sf$")      => MergeStrategy.discard
+      case "log4j.properties"                                  => MergeStrategy.discard
+      case m if m.toLowerCase.startsWith("meta-inf/services/") => MergeStrategy.filterDistinctLines
+      case "reference.conf"                                    => MergeStrategy.concat
+      case _ => MergeStrategy.first
+    },
 
     // uses compile classpath for the run task, including "provided" jar (cf http://stackoverflow.com/a/21803413/3827)
     run in Compile := Defaults.runTask(fullClasspath in Compile, mainClass in (Compile, run), runner in (Compile, run)).evaluated
